added solution code to index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
     <p>Explore the music, videos, and latest updates from Melody Sky.</p>
 
-    <section>
+    <section id="tour-schedule">
         <h2>Albums</h2>
         <div>
             <img src="assets/images/melody-sky-planetSky.png" alt="Planet Sky Album cover">
@@ -35,7 +35,27 @@
     </section>
 
     <!-- Write your new code under this line. -->
-     
+    <section id="tour-schedule">
+        <h2>Tour Schedule</h2>
+        <table>
+            <tr>
+                <th>Date</th>
+                <th>Location</th>
+            </tr>
+            <tr>
+                <td>March 10, 2024</td>
+                <td>New York, NY</td>
+            </tr>
+            <tr>
+                <td>March 15, 2024</td>
+                <td>Los Angeles, CA</td>
+            </tr>
+            <tr>
+                <td>March 20, 2024</td>
+                <td>Chicago, IL</td>
+            </tr>
+        </table>
+    </section>
 </body>
 
 </html>
